# X-Ring-Classic

./: .gitignore  404.html  FIREBASE_RULES_UPDATE.md  FIREBASE_SETUP.md  GUNGUYS_LOGO_README.txt  README.md  asset-manifest.json  firestore.rules  index.html  manifest.json  open_admin_dashboard.bat  package-lock.json  package.json  pyproject.toml  setup.js  test-firebase.js  test-registration-simple.js  test-registration.js
.github/workflows/: deploy-gh-pages.yml  pages.yml
Desktop/LLM-Network-main/: LLM_NETWORK_MVP.md  README.md  quickstart_demo.bat  start_dashboard.bat  start_network_server.bat  start_tunnel.bat  start_worker_daemon.bat
client/: package-lock.json  package.json  tailwind.config.js
client/public/: 404.html  index.html
client/src/: App.js  index.css  index.js
ranks/: README.txt
server/: env.example  index.js  package-lock.json  package.json  test-firebase.js
server/middleware/: auth.js
server/routes/: admin.js  auth.js  competitions.js  leaderboards.js  payments.js  public.js  scores.js  sponsorships.js  users.js
server/services/: classification.js  firebase.js  paypal.js
src/ollama_network/: auth.py  branding.py  catalog.py  dashboard.py  demo.py  executor.py  landing.py  ledger.py  local_hardware.py  service.py
static/css/: main.068230b9.css  main.068230b9.css.map  main.109d608f.css  main.109d608f.css.map  main.116ccf76.css  main.116ccf76.css.map  main.164926a2.css  main.164926a2.css.map  main.210b4430.css  main.210b4430.css.map  main.26a5b185.css  main.26a5b185.css.map  (+62 more)
tests/: test_artifacts.py  test_ollama_local.py
(+160 files in other folders)
